package ESB;

message Command {
	
	enum Cmd {
		ERROR = 1;
		RESPONSE = 2;
		ERROR_RESPONSE = 3;
		NODE_HELLO = 4;
		PROXY_HELLO = 5;
		PING = 6;
		PONG = 7;
		INVOKE = 8;
		REGISTER_INVOKE = 9;
		REGISTER_INVOKE_OK = 10;
		REGISTRY_EXCHANGE_REQUEST = 11;
		REGISTRY_EXCHANGE_RESPONSE = 12;
		PUBLISH = 13;
		SUBSCRIBE = 14;
	};
	
	required Cmd cmd = 1;
	required string source_proxy_guid = 2;
	required bytes payload = 3;
	optional string target_proxy_guid = 4;
	optional string identifier = 5;
	optional string guid_from = 6;
	optional string guid_to = 7;
	optional int32 recursion = 8;
	optional uint32 start_time = 9;
	optional int32 timeout_ms = 10;
	
	enum RegistryEntryType {
		INVOKE_METHOD = 1;
	};
	
	message RegistryEntry {
		required RegistryEntryType type = 1 [default = INVOKE_METHOD];
		required string identifier = 2;
		required string method_guid = 3;
		required string proxy_guid = 4; 
	};
	
	repeated RegistryEntry reg_entry = 11;
}
